# Rebuilt2026

./: .gitignore  CLAUDE.md  PROGRAMMING_INTRO.md  PROGRAMMING_NOTEBOOK.md  README.md  ShotDistance.xlsx  choreo_splits.ipynb  ids.py  physics.py  pyproject.toml  robot.py  vision_worker.py
.claude/: settings.local.json
autonomous/: auto_alphabot.py  auto_beta.py  base.py
components/: Intake.py  battery_monitor.py  climber.py  drivetrain.py  gyro.py  intake.py  kicker.py  leds.py  shooter.py  shot_calculator.py  singulater.py  singulator.py  turret.py  vision.py
controllers/: gaspump.py  tanker.py
deploy/choreo/: HopperShoot.traj  HopperShoot2.traj  HopperShootTwo.traj  HopperShoot_Move.traj  Left_blue_simple.traj  PathTest.traj  PlayerStationBump.traj  PlayerStationBumpNoHang.traj  RebuiltJim.chor  RightBump.traj  RightRed.traj  Right_2_hopper.traj  ball_path.traj  ballpath.chor  go_to_player_station.traj  jjb.chor  middle_hang.traj  right_blue_simple.traj  test_path.traj
deploy/pathplanner/paths/: New Path.path
hid/: xbox_driver.py  xbox_operator.py
utilities/: choreo_utils.py  game.py  scalers.py
