[project]
name = "rebuilt2026"
version = "0.1.0"
description = "TriSonics 4003 Rebuilt 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "phoenix6>=26.1.0",
    "robotpy>=2026.2.1",
    "robotpy-apriltag>=2026.2.1",
    "wpilib>=2026.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["components", "utilities", "generated"]
