[project]
name = "rebuilt2026"
version = "0.1.0"
description = "TriSonics 4003 Rebuilt 2026"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "phoenix6>=26.1.0",
    "robotpy[apriltag]>=2026.2.1",
    "robotpy-apriltag>=2026.2.1",
    "wpilib>=2026.2.1",
    "sleipnirgroup-choreolib>=2026.0.1",
]
[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.2.1"

# Which optional robotpy components should be installed?
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    #"all",
    "apriltag",
    # "commands2",
    # "cscore",
    # "romi",
    # "sim",
    # "xrp",
]

requires = [
    "phoenix6>=26.1.0",
    "sleipnirgroup-choreolib>=2026.0.1",
    # "photonlibpy",
    # "robotpy-ctre",  # Phoenix 5
    # "robotpy-navx",
    # "robotpy-pathplannerlib",
    # "robotpy-playingwithfusion",
    # "robotpy-rev",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "I001",   # unsorted imports
]

[tool.ruff.lint.isort]
known-first-party = ["components", "utilities", "generated"]
